Bug 1615202 - Suppression intermittent XDR race variation in TSan. r=froydnj

Differential Revision: https://phabricator.services.mozilla.com/D62722